; ModuleID = '/home/carl/AnghaBench/micropython/ports/esp8266/extr_esp_mphal.c_mp_hal_debug_tx_strn_cooked.c'
source_filename = "/home/carl/AnghaBench/micropython/ports/esp8266/extr_esp_mphal.c_mp_hal_debug_tx_strn_cooked.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UART0 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_hal_debug_tx_strn_cooked(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i8*, i8** %4, align 8
  br label %8

8:                                                ; preds = %20, %3
  %9 = load i32, i32* %6, align 4
  %10 = add nsw i32 %9, -1
  store i32 %10, i32* %6, align 4
  %11 = icmp ne i32 %9, 0
  br i1 %11, label %12, label %26

12:                                               ; preds = %8
  %13 = load i8*, i8** %5, align 8
  %14 = load i8, i8* %13, align 1
  %15 = sext i8 %14 to i32
  %16 = icmp eq i32 %15, 10
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i32, i32* @UART0, align 4
  %19 = call i32 @uart_tx_one_char(i32 %18, i8 signext 13)
  br label %20

20:                                               ; preds = %17, %12
  %21 = load i32, i32* @UART0, align 4
  %22 = load i8*, i8** %5, align 8
  %23 = getelementptr inbounds i8, i8* %22, i32 1
  store i8* %23, i8** %5, align 8
  %24 = load i8, i8* %22, align 1
  %25 = call i32 @uart_tx_one_char(i32 %21, i8 signext %24)
  br label %8

26:                                               ; preds = %8
  ret void
}

declare dso_local i32 @uart_tx_one_char(i32, i8 signext) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
